# beeai-workshop

./: .spellcheck-en-custom.txt  .spellcheck.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  spellcheck.yaml
beeai_fw_tavily_redis/: env.template  main.py  pyproject.toml
beeai_fw_tavily_redis/example_docs/: crisis_management_guidance.md  mcplant_launch_brief.md  supply_chain_disruption_guidance.md
beeai_fw_tavily_redis/src/: agent.py  redis_retriever.py  redis_vector_db.py  tavily_mcp_tool.py
beeai_fw_tavily_redis/src/solutions/: agent.py  redis_retriever.py  redis_vector_db.ipynb  tavily_mcp_local.py  tavily_mcp_tool.py
docs/: README.md
docs/Introduction_acp_beeai/lab-1/: README.md
docs/Introduction_acp_beeai/lab-2/: README.md
docs/Introduction_acp_beeai/lab-3/: README.md
docs/beeai_fw__tavily_redis/agent/: README.md
docs/beeai_fw__tavily_redis/cleanup/: README.md
docs/beeai_fw__tavily_redis/overview/: README.md
docs/beeai_fw__tavily_redis/pre-work/: README.md
docs/beeai_fw__tavily_redis/setup/: README.md
docs/beeai_fw__tavily_redis/tools/: README.md
docs/introduction_beeai_framework/overview/: README.md
docs/overview_of_beeai/lab-1/: README.md
docs/overview_of_beeai/lab-2/: README.md
docs/overview_of_beeai/lab-3/: README.md
docs/overview_of_beeai/overview/: README.md
docs/overview_of_beeai/pre-work/: README.md
docs/overview_of_beeai/setup/: README.md
docs/overview_of_beeai/uninstall_troubleshooting/: README.md
intro_acp_beeai/: env.template  pyproject.toml
intro_acp_beeai/src/: ticket_workflow_agent.py
intro_beeai_framework/: README.md  beeai_framework_workshop_conference_agent.ipynb  env.template  pyproject.toml
intro_beeai_framework/src/: agent.py
overview_of_beeai/: env.template  pyproject.toml
overview_of_beeai/src/: ticket_response_agent.py  ticket_triage_agent.py  ticket_workflow_agent.py
