[project]
name = "beeai-fw-tavily-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beeai-framework==0.1.25",
    "langchain-huggingface>=0.3.1",
    "langchain-redis>=0.2.3",
    "langchain-text-splitters>=0.3.8",
    "mcp==1.12.0",
    "pip>=25.1.1",
    "pydantic==2.11.7",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
]
