[project]
name = "intro_beeai_framework"
version = "0.1.0"
description = "Introduction to BeeAI workshop"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "arize-phoenix",
    "langchain-community",
    "openinference-instrumentation-beeai",
    "beeai-framework~=0.1.49",
    "beeai-framework[a2a]~=0.1.49",
    "beeai-framework[duckduckgo]~=0.1.49",
    "beeai-framework[llama_index]~=0.1.49",
    "beeai-framework[wikipedia]~=0.1.49",
    "beeai-sdk~=0.3.4",
    "python-dotenv~=1.1.1",
    "pydantic-ai~=0.7.6",
    "markdown",
    "unstructured",
]
